# MetaQuant_1.0

./: CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  biascorrection.cpp  biascorrection.h  bundles.cpp  bundles.h  config.h  directiondetector.cpp  directiondetector.h  fragments.cpp  fragments.h  frequencymatrix.h  lengthdistribution.cpp  lengthdistribution.h  library.h  logger.h  main.cpp  main.h  mapparser.cpp  mapparser.h  markovmodel.cpp  markovmodel.h  memdebug.h  mismatchmodel.cpp  mismatchmodel.h  robertsfilter.cpp  robertsfilter.h  sequence.cpp  sequence.h  targets.cpp  targets.h  threadsafety.cpp  threadsafety.h  trigamma.cpp  trigamma.h  update_check.h
